// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Radio with snapshot Testing Radio with required and optional props 1`] = `
<label
  className=""
  htmlFor="dell"
>
  <input
    className=""
    data-testid="Radio"
    defaultChecked={false}
    disabled={true}
    id="dell"
    name="laptops"
    onChange={[Function]}
    type="radio"
    value="dell"
  />
  <div
    className=""
  />
  <span
    className="text-2xl"
  >
    dell
  </span>
</label>
`;

exports[`Testing Radio with snapshot Testing Radio with required props 1`] = `
<label
  className=""
  htmlFor="dell"
>
  <input
    className="undefined"
    data-testid="Radio"
    disabled={false}
    id="dell"
    name="laptops"
    onChange={[Function]}
    type="radio"
    value="dell"
  />
  <div
    className=""
  />
  <span
    className="ml-2"
  />
</label>
`;
